--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 html {
-   background: rgb(200, 200, 200);
+   background: rgb(225, 225, 225);
    color: rgb(100, 100, 100);
 }
 
-@media screen and (orientation: portrait) {
+@media screen and (max-width: 550px) {
    * {
       margin: 0;
       padding: 0;
@@ -12,7 +12,7 @@ html {
    div {
       position: absolute;
       background: rgb(0, 0, 0);
-      margins: 0;
+      margin: 0;
       height: 100%;
       width: 100%;
 
@@ -25,9 +25,26 @@ html {
    }
 }
 
-@media screen and (orientation: landscape) {
+@media screen and (min-width: 550px) {
    #block {
       display: none;
+   }
+
+   #container {
+      /* The magic centering code */
+      margin: auto;
+      position: absolute;
+      top: 1em;
+      bottom: 0;
+      /* Aligns Vertically - Remove for Horizontal Only */
+      left: 0;
+      right: 0;
+      /* Aligns Horizontally - Remove for Vertical Only  */
+
+      /* Prevent div from overflowing main window */
+      max-width: 100%;
+      max-height: 100%;
+      overflow: auto;
    }
 
    h2 {
