--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ html {
       padding: 0;
    }
 
-   div {
+   #container {
+      display: none;
+   }
+
+   #block {
       position: absolute;
       background: rgb(0, 0, 0);
       margin: 0;
