--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 	color: rgb(100, 100, 100);
 }
 
-@media screen and (max-width: 600px) and (orientation: portrait) {
+@media screen and (max-width: 750px) {
 	* {
 		margin: 0;
 		padding: 0;
@@ -31,26 +31,17 @@ html {
 	}
 }
 
-@media screen and (min-width: 600px) and (orientation: landscape) {
+@media screen and (min-width: 750px) and (orientation: landscape) {
 	#block {
 		display: none;
 	}
 
 	#container {
-		/* The magic centering code */
-		margin: auto;
-		position: absolute;
-		top: 1.1em;
-		bottom: 0;
-		/* Aligns Vertically - Remove for Horizontal Only */
-		left: 0;
-		right: 0;
-		/* Aligns Horizontally - Remove for Vertical Only  */
-
-		/* Prevent div from overflowing main window */
-		max-width: 100%;
-		max-height: 100%;
-		overflow: auto;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 100%;
 	}
 
 	h2 {
