--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 	color: rgb(100, 100, 100);
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-aspect-ratio: 9/19.5) or (max-aspect-ratio: 9/16) {
 	* {
 		margin: 0;
 		padding: 0;
@@ -31,7 +31,7 @@ html {
 	}
 }
 
-@media screen and (min-width: 600px) and (orientation: landscape) {
+@media screen and (min-aspect-ratio: 16/9) or (min-aspect-ratio: 19.5/9) {
 	#block {
 		display: none;
 	}
