--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
 
 @media screen and (min-aspect-ratio: 16/9) or (min-aspect-ratio: 19.5/9) or (orientation: landscape) {
 	#block {
-		/* modify properties here as needed */
+		display: none;
 	}
 
 	#container {
