--- a/style.css
+++ b/style.css
@@ -3,72 +3,108 @@ html {
 	color: rgb(100, 100, 100);
 }
 
+body {
+	margin: 0;
+	padding: 0;
+}
+
+#block {
+	margin-top: 0;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: black;
+	color: white;
+	font-family: "Lato", sans-serif;
+	font-weight: 400;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 500;
+}
 
 #container {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 100%;
+	display: none;
 }
 
-h2 {
-	text-transform: uppercase;
-	text-align: center;
-	letter-spacing: .25rem;
-	font-family: "Lato", sans-serif;
-	font-weight: 400;
-	font-size: .75rem;
+@media all and (orientation: portrait) {
+	#block {
+		display: flex;
+	}
 }
 
-h1 {
-	text-transform: uppercase;
-	text-align: center;
-	margin-top: -.35em;
-	font-family: "Oswald", sans-serif;
-	font-weight: 500;
-}
+@media all and (orientation: landscape) {
+	#block {
+		display: none;
+	}
+
+	#container {
+		display: inline;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 100%;
+	}
+
+	h2 {
+		text-transform: uppercase;
+		text-align: center;
+		letter-spacing: .25rem;
+		font-family: "Lato", sans-serif;
+		font-weight: 400;
+		font-size: .75rem;
+	}
+
+	h1 {
+		text-transform: uppercase;
+		text-align: center;
+		margin-top: -.35em;
+		font-family: "Oswald", sans-serif;
+		font-weight: 500;
+	}
 
 
-#title {
-	text-transform: uppercase;
-	letter-spacing: .125rem;
-	text-align: center;
-}
+	#title {
+		text-transform: uppercase;
+		letter-spacing: .125rem;
+		text-align: center;
+	}
 
-ul {
-	margin-top: -.5em;
-	padding: 0;
-	text-align: center;
-	font-family: "Ms Madi", cursive;
-	font-weight: 300;
-}
+	ul {
+		margin-top: -.5em;
+		padding: 0;
+		text-align: center;
+		font-family: "Ms Madi", cursive;
+		font-weight: 300;
+	}
 
-li {
-	display: inline-block;
-	list-style-type: none;
-	padding: 1em;
-	padding-top: 0em;
-	font-size: 1.15rem;
-}
+	li {
+		display: inline-block;
+		list-style-type: none;
+		padding: 1em;
+		padding-top: 0em;
+		font-size: 1.15rem;
+	}
 
-li span {
-	display: block;
-	font-size: 3.5rem;
-	margin-bottom: -.25em;
-}
+	li span {
+		display: block;
+		font-size: 3.5rem;
+		margin-bottom: -.25em;
+	}
 
-#name {
-	font-size: 1.75rem;
-}
+	#name {
+		font-size: 1.75rem;
+	}
 
-p {
-	width: 30em;
-	margin: auto;
-	margin-top: -1.15em;
+	p {
+		width: 30em;
+		margin: auto;
+		margin-top: -1.15em;
 
-	font-family: "Lato", sans-serif;
-	font-weight: 400;
-	text-align: center;
-	font-size: .9rem;
+		font-family: "Lato", sans-serif;
+		font-weight: 400;
+		text-align: center;
+		font-size: .9rem;
+	}
 }
