--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ body {
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
 	display: flex;
-	font-size: 125%;
 	align-items: center;
 	justify-content: center;
 	z-index: 500;
+	font-size: 4vh;
 }
 
 #container {
@@ -51,10 +51,10 @@ body {
 	h2 {
 		text-transform: uppercase;
 		text-align: center;
-		letter-spacing: .25rem;
+		letter-spacing: .5rem;
 		font-family: "Lato", sans-serif;
 		font-weight: 400;
-		font-size: .75rem;
+		font-size: 1rem;
 	}
 
 	h1 {
@@ -68,12 +68,13 @@ body {
 
 	#title {
 		text-transform: uppercase;
-		letter-spacing: .125rem;
+		letter-spacing: .355rem;
+		font-size: 2.25rem;
 		text-align: center;
 	}
 
 	ul {
-		margin-top: -.5em;
+		margin-top: -.25em;
 		padding: 0;
 		text-align: center;
 		font-family: "Ms Madi", cursive;
@@ -83,29 +84,30 @@ body {
 	li {
 		display: inline-block;
 		list-style-type: none;
-		padding: 1em;
+		padding: 1.25em;
 		padding-top: 0em;
-		font-size: 1.15rem;
+		font-size: 1.4rem;
 	}
 
 	li span {
 		display: block;
-		font-size: 3.5rem;
-		margin-bottom: -.25em;
+		font-size: 3.75rem;
+		margin-bottom: -1rem;
 	}
 
 	#name {
-		font-size: 1.75rem;
+		font-size: 2rem;
+		margin-top: -.35em;
 	}
 
 	p {
-		width: 30em;
+		width: 30.25em;
 		margin: auto;
-		margin-top: -1.15em;
+		margin-top: -.95em;
 
 		font-family: "Lato", sans-serif;
 		font-weight: 400;
 		text-align: center;
-		font-size: .9rem;
+		font-size: 1.15rem;
 	}
 }
